WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292422
[Swift in WebKit] The Swift implementation of TextExtraction types is incorrect
https://bugs.webkit.org/show_bug.cgi?id=292422
Summary
[Swift in WebKit] The Swift implementation of TextExtraction types is incorrect
Richard Robinson
Reported
2025-05-01 21:34:33 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-01 21:34:43 PDT
<
rdar://problem/150497419
>
Richard Robinson
Comment 2
2025-05-01 21:35:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44831
EWS
Comment 3
2025-05-02 12:22:34 PDT
Committed
294442@main
(6c8ce53a001b): <
https://commits.webkit.org/294442@main
> Reviewed commits have been landed. Closing PR #44831 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug